--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,11 @@
 version: '3.0'
 services:
-  mongodb:
-    image: mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-    ports:
-      - "27017:27017"
-    volumes:
-      - hostPath:containerPath:ro
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - "9090:9090"
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-
   wx_app:
     image: ghcr.io/yuandongx/wx_app
     restart: always
     ports:
       - "80:8888"
     volumes:
-      - hostPath:containerPath:ro
+      - ../wx_app:/opt/workspace/wx_app
+      - ../wx_app:/opt/workspace/wx_app
+      
